fix sending ads list empty removing existing monitorAds